# chatbot

./: .travis.yml  CNAME  Cargo.toml  LICENSE.md  Makefile  README.md  circle.yml  mkdoc.sh  search-index.js  upload-docs.sh
chatbot/: index.html  macro.handler!.html  macro.regex!.html  sidebar-items.js  struct.Chatbot.html
chatbot/adapter/: index.html  sidebar-items.js  struct.CliAdapter.html  struct.IrcAdapter.html  struct.SlackAdapter.html  trait.ChatAdapter.html  type.IrcConfig.html
chatbot/adapter/cli/: sidebar-items.js  struct.CliAdapter.html
chatbot/adapter/irc/: sidebar-items.js  struct.IrcAdapter.html  type.IrcConfig.html
chatbot/adapter/slack/: sidebar-items.js  struct.SlackAdapter.html
chatbot/chatbot/: sidebar-items.js  struct.Chatbot.html
chatbot/handler/: index.html  sidebar-items.js  struct.BasicResponseHandler.html  struct.GithubIssueLinker.html  trait.MessageHandler.html  type.HandlerResult.html
chatbot/handler/githubissue/: sidebar-items.js  struct.GithubIssueLinker.html
chatbot/handler/sup/: fn.account_from_env.html  index.html  sidebar-items.js  struct.AddMatch.html  struct.PrintLadder.html  type.Account.html
chatbot/message/: enum.AdapterMsg.html  index.html  sidebar-items.js  struct.IncomingMessage.html  struct.OutgoingMessage.html
examples/: bot.rs  cli_echo.rs  cli_ping.rs
implementors/chatbot/handler/: trait.MessageHandler.js
implementors/core/clone/: trait.Clone.js
implementors/core/fmt/: trait.Debug.js
src/: chatbot.rs  lib.rs  main.rs  message.rs
src/adapter/: adapter.rs  cli.rs  irc.rs  mod.rs  slack.rs
src/adapter/slack/: message.rs  mod.rs
src/chatbot/: chatbot.rs.html  lib.rs.html  message.rs.html
src/chatbot/adapter/: cli.rs.html  irc.rs.html  mod.rs.html
src/chatbot/adapter/slack/: mod.rs.html
src/chatbot/handler/: githubissue.rs.html  mod.rs.html
src/handler/: echo.rs  githubissue.rs  handler.rs  mod.rs  ping.rs
src/handler/sup/: mod.rs
(+1 files in other folders)
