[package]
name = "chatbot"
version = "0.2.3"
authors = ["Joe Wilm <joe@jwilm.com>"]
license = "MIT"
description = "An extensible chatbot"
documentation = "https://chatbot.rs/chatbot/"
repository = "https://github.com/jwilm/chatbot"
keywords = ["chat", "bot", "extensible"]
readme = "README.md"

[dependencies]
regex = "0.1"
rustc-serialize = "0.3"
getopts = "0.2"
irc = { version = "0.11", optional = true }

[dependencies.slack]
git = "https://github.com/jwilm/slack-rs"
rev = "a7390f2524a8e9e886f8b1be2d2a992261f5065b"
optional = true

[features]
default = []
irc-adapter = ["irc"]
slack-adapter = ["slack"]
