[package]
name = "chatbot"
version = "0.2.3"
authors = ["Joe Wilm <joe@jwilm.com>"]
license = "MIT"
description = "An extensible chatbot"
documentation = "https://docs.rs/chatbot"
repository = "https://github.com/jwilm/chatbot"
keywords = ["chat", "bot", "extensible"]
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[dependencies]
regex = "0.1"
rustc-serialize = "0.3"
getopts = "0.2"
irc = { version = "0.12", optional = true }
slack = { version = "0.18.0", optional = true }

[features]
default = []
irc-adapter = ["irc"]
slack-adapter = ["slack"]
